refactor : fixed logout button, remodeled home page

--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -9,6 +9,7 @@
     <script src="/bootstrap/js/bootstrap.bundle.min.js" th:src="@{/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
     <script type="text/javascript" th:src="@{/js/info.js}"></script>
+    <script type="text/javascript" th:src="@{/js/layout.js}"></script>
 
     <link th:href="@{/css/navbar.css}" rel="stylesheet">
 </head>
