--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -32,8 +32,7 @@
             </li>
         </ul>
     </div>
-    <div th:switch="${not_logged_in}">
-        <a class="btn btn-primary" role="button" th:case="${true}" th:href="@{/user/login}">Login</a>
+    <div>
         <a id="logoutButton" class="btn btn-primary" role="button" style="display: none" th:href="@{/user/logout}">Logout</a>
     </div>
 </nav>
@@ -46,31 +45,6 @@
 <script src="js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}"></script>
 
 <!-- Other JavaScript files -->
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        // Check if "authToken" cookie exists
-        if (getCookie('authToken')) {
-            // If the cookie exists, make the logout button visible
-            document.getElementById('logoutButton').style.display = 'block';
-        }else{
-            document.getElementById('logoutButton').style.display = 'block';
 
-        }
-    });
-
-    function getCookie(name) {
-        const cookies = document.cookie.split(';'); // Split the cookie string into an array of individual cookies
-        for (let i = 0; i < cookies.length; i++) {
-            const cookiePair = cookies[i].trim().split('='); // Trim any leading or trailing whitespace
-            // Check if this cookie starts with the name we're looking for
-            if (cookiePair[0]===name) {
-                // If it does, return true to indicate the cookie exists
-                return true;
-            }
-        }
-        // If the cookie was not found, return false
-        return false;
-    }
-</script>
 </body>
 </html>
