--- a/src/main/resources/templates/record.html
+++ b/src/main/resources/templates/record.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>UserRequest</title>
+    <script type="text/javascript" th:src="@{/js/layout.js}"></script>
 </head>
 <body>
 <h1>menu</h1>
