--- a/src/main/resources/templates/route-save.html
+++ b/src/main/resources/templates/route-save.html
@@ -9,6 +9,8 @@
 <body>
 <h1>Route Save Page</h1>
 <script type="text/javascript" th:src="@{/js/userRequest.js}"></script>
+<script type="text/javascript" th:src="@{/js/layout.js}"></script>
+
 
 <form action="/route/save" method="POST">
     <label for="title">Route Title:</label><br>
