--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
     <!-- Bootstrap -->
     <link href="/bootstrap/css/bootstrap.min.css" th:href="@{/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
     <script src="/bootstrap/js/bootstrap.bundle.min.js" th:src="@{/bootstrap/js/bootstrap.bundle.min.js}"></script>
-
+    <script type="text/javascript" th:src="@{/js/layout.js}"></script>
     <link th:href="@{/css/navbar.css}" rel="stylesheet">
 
     <style>
@@ -33,7 +33,23 @@
             <a href="/user/logout" class="nav-link">Logout</a>
         </li>
     </ul>
-
+    <div class="row">
+        <div class="col-md-4">
+            <a href="/">
+                <img src="/image/run.webp" class="img-fluid" alt="Run!">
+            </a>
+        </div>
+        <div class="col-md-4">
+            <a href="/message/conversationList">
+                <img src="/image/message.webp" class="img-fluid" alt="Messages">
+            </a>
+        </div>
+        <div class="col-md-4">
+            <a href="/community">
+                <img src="/image/community.webp" class="img-fluid" alt="Community">
+            </a>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
