--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -123,5 +123,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" th:src="@{/js/message.js}"></script>
+<script type="text/javascript" th:src="@{/js/layout.js}"></script>
+
 </body>
 </html>
