--- a/src/main/resources/templates/userRequest.html
+++ b/src/main/resources/templates/userRequest.html
@@ -7,6 +7,8 @@
     <!-- Bootstrap -->
     <link href="/bootstrap/css/bootstrap.min.css" th:href="@{/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
     <script src="/bootstrap/js/bootstrap.bundle.min.js" th:src="@{/bootstrap/js/bootstrap.bundle.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/layout.js}"></script>
+
 
     <link rel="stylesheet" type="text/css" href="../css/userRequest.css">
     <title>UserRequest</title>
