refactor : message refactoring

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -40,7 +40,7 @@
             </a>
         </div>
         <div class="col-md-4">
-            <a href="/message/conversationList">
+            <a href="/message">
                 <img src="/image/message.webp" class="img-fluid" alt="Messages">
             </a>
         </div>
