--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,7 +22,7 @@
                 <a class="nav-link" th:href="@{/user/home}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/message/conversationList}">Message</a>
+                <a class="nav-link" th:href="@{/message}">Message</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/running}">Run!</a>
